# dplay_lobby_emulator

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: direct_play_4.rs  direct_play_lobby_3.rs  dpcompound_address_element.rs  dplappinfo.rs  dplconnection.rs  dpname.rs  dpsession_desc2.rs  main.rs
ui/: appwindow.slint
