[package]
name = "dplay_lobby_emulator"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"

[build-dependencies]
slint-build = "1.5.1"
winres = "0.1.12"

[dependencies.windows]
version = "0.54.0"
features = ["Win32_System_Com", "Win32_UI_WindowsAndMessaging", "implement"]
